--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "03-api-solid",
+  "name": "find-a-friend-api",
   "version": "1.0.0",
-  "description": "GymPass style app.",
+  "description": "Dog find app.",
   "main": "index.js",
   "scripts": {
     "start": "node build/server.js",
@@ -12,16 +12,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@rocketseat/eslint-config": "1.2.0",
-    "@types/node": "20.2.5",
-    "eslint": "8.41.0",
-    "tsup": "6.7.0",
-    "tsx": "3.12.7",
-    "typescript": "5.0.4"
+    "@rocketseat/eslint-config": "2.2.2",
+    "@types/node": "20.11.24",
+    "eslint": "8.57.0",
+    "prisma": "^5.10.2",
+    "tsup": "8.0.2",
+    "tsx": "4.7.1",
+    "typescript": "5.3.3"
   },
   "dependencies": {
-    "dotenv": "16.0.3",
-    "fastify": "4.17.0",
-    "zod": "3.21.4"
+    "dotenv": "16.4.5",
+    "fastify": "4.26.2",
+    "zod": "3.22.4"
   }
 }
