--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "start": "node build/server.js",
     "dev": "tsx watch src/server.ts",
     "build": "tsup src --out-dir build",
-    "test":"vitest run"
+    "test": "vitest run"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@rocketseat/eslint-config": "2.2.2",
+    "@types/bcryptjs": "2.4.6",
     "@types/node": "20.11.24",
     "eslint": "8.57.0",
     "prisma": "5.10.2",
@@ -24,6 +25,8 @@
     "vitest": "1.3.1"
   },
   "dependencies": {
+    "@prisma/client": "5.10.2",
+    "bcryptjs": "2.4.3",
     "dotenv": "16.4.5",
     "fastify": "4.26.2",
     "zod": "3.22.4"
