--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "node build/server.js",
     "dev": "tsx watch src/server.ts",
     "build": "tsup src --out-dir build",
-    "test": "vitest run"
+    "test": "vitest run",
+    "test:wath": "vitest",
+    "test:coverage": "vitest --coverage"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +18,7 @@
     "@rocketseat/eslint-config": "2.2.2",
     "@types/bcryptjs": "2.4.6",
     "@types/node": "20.11.24",
+    "@vitest/coverage-v8": "1.3.1",
     "eslint": "8.57.0",
     "prisma": "5.10.2",
     "tsup": "8.0.2",
