--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "build": "tsup src --out-dir build",
     "test": "vitest run",
     "test:wath": "vitest",
-    "test:coverage": "vitest --coverage"
+    "test:coverage": "vitest run --coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "8.4.1",
     "@rocketseat/eslint-config": "2.2.2",
     "@types/bcryptjs": "2.4.6",
     "@types/node": "20.11.24",
