--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "scripts": {
     "start": "node build/server.js",
     "dev": "tsx watch src/server.ts",
+    "test:create-prisma-environment": "cd ./prisma/vitest-environment-prisma && npm link",
+    "test:install-prisma-environment": "npm link vitest-environment-prisma",
     "build": "tsup src --out-dir build",
-    "test": "vitest run",
-    "test:wath": "vitest",
+    "test": "vitest run --dir src/use-cases",
+    "test:watch": "vitest --dir src/use-cases",
+    "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
+    "test:e2e": "vitest run --dir src/http",
     "test:coverage": "vitest run --coverage"
   },
   "keywords": [],
@@ -21,6 +25,7 @@
     "@types/node": "20.11.24",
     "@vitest/coverage-v8": "1.3.1",
     "eslint": "8.57.0",
+    "npm-run-all": "4.1.5",
     "prisma": "5.10.2",
     "tsup": "8.0.2",
     "tsx": "4.7.1",
