--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@rocketseat/eslint-config": "2.2.2",
     "@types/bcryptjs": "2.4.6",
     "@types/node": "20.11.24",
+    "@types/supertest": "6.0.2",
     "@vitest/coverage-v8": "1.3.1",
     "eslint": "8.57.0",
     "npm-run-all": "4.1.5",
     "prisma": "5.10.2",
+    "supertest": "6.3.4",
     "tsup": "8.0.2",
     "tsx": "4.7.1",
     "typescript": "5.3.3",
