modify deploy file

--- a/.github/workflows/deploy-render.yml
+++ b/.github/workflows/deploy-render.yml
@@ -1,15 +1,16 @@
-name: Render
+name: Deploy
 
-on: [push]:
+on: [push]
 
 jobs:
   deploy:
     name: Wait for Deploy
     runs-on: ubuntu-latest
+
     steps:
-      - name: Wait for Render Deployment
-        uses: bounceapp/render-action@0.6.0
+      - uses: bounceapp/render-action@0.6.0
         with:
+          node-version: 18
           render-token: ${{ secrets.RENDER_TOKEN }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
           service-id: srv-cnjo1021hbls73dqsbcg
